# JFerrosDigitalOcean

./: .gitignore  my.cnf  package-lock.json  package.json  pyproject.toml  requirements.txt
backup/: apps.py  urls.py  views.py
backups/: CS_2023-11-07-12-23-54.json
compras/: forms.py  models.py  views.py
compras/migrations/: 0001_initial.py  0002_initial.py  0003_cuenta_pendiente_valor_restar.py  0004_alter_cuenta_pendiente_valor_restar.py  0005_alter_cuenta_pendiente_nombre_and_more.py  0006_alter_cuenta_pendiente_nombre_and_more.py
ingreso_egreso/: forms.py  models.py  urls.py  views.py
ingreso_egreso/migrations/: 0001_initial.py  0002_initial.py  0003_alter_detalle_venta_precio_venta.py  0004_alter_detalle_venta_precio_venta.py  0005_alter_detalle_venta_precio_venta.py  0006_alter_detalle_compra_precio_compra_and_more.py  0007_alter_detalle_venta_precio_venta_and_more.py  0008_alter_detalle_venta_precio_venta.py  0009_remove_stock_detalle_compra.py  0010_remove_detalle_venta_precio_venta.py  0011_alter_detalle_compra_precio_compra.py
main/: settings.py  urls.py  views.py
main/templates/: index.html
producto/: forms.py  models.py  urls.py  views.py
producto/migrations/: 0001_initial.py  0002_alter_producto_precio.py  0003_alter_unidades_medida.py
static/css/: dark.css  styles.css
static/js/: scripts.js
usuarios/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_alter_usuario_apellido_alter_usuario_nombre.py  (+1 more)
ventas/: forms.py  models.py  urls.py  views.py
(+53 files in other folders)
